Compiler diagnostic commands should have locking instead of safepoint

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b107
    • Verified

      Compiler diagnostic commands rely on vm_operations for correctness. This is overkill since the code is already using locks. The diagnostic commands are small and well suited to run concurrently. Replace the vm_ops with taking the proper locks.

            Assignee:
            Nils Eliasson (Inactive)
            Reporter:
            Nils Eliasson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: