8063112: Compiler diagnostic commands should have locking instead of safepoint

Remove unnecessary vm-ops and add locking instead, improve output

Reviewed-by: kvn