hotspot/src/share/vm/compiler/compileBroker.hpp
@@ -350,8 +350,6 @@ public:
   // Debugging output for failure
   static void print_last_compile();
 
-  static void print_compiler_threads_on(outputStream* st);
-
   // compiler name for debugging
   static const char* compiler_name(int comp_level);
 
